# verified-financials

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Sentinel - Product and User Guide.docx  Verified Financials - Product and User Guide.docx  config.yaml  config_advanced.yaml  pyproject.toml  render.yaml
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/components/: AnimatedNumber.tsx  AppLayout.tsx  Figure.tsx  GoalSeekCard.tsx  GuideDialog.tsx  KpiTile.tsx  PresenterTour.test.tsx  PresenterTour.tsx  ProvenanceDialog.tsx  QueryStates.test.tsx  QueryStates.tsx  RouteError.tsx  StatusBadge.tsx  Term.tsx  TopBar.tsx  WhatIfPanel.tsx
frontend/src/hooks/: queries.ts  useDebounce.ts  useInView.ts
frontend/src/lib/: api.test.ts  api.ts  format.test.ts  format.ts  query.ts  (+6 more)
scripts/: generate_user_guide.py
src/verified_financials/: __init__.py  _env.py  cli.py  datagen.py  pipeline.py
tests/: conftest.py  test_advanced_modeling.py  test_api.py  test_borrowing_base.py  test_briefing.py  test_cashflow_calibration.py  test_cashflow_engine.py  test_cashflow_html.py  test_certificate_html.py  test_data_generation.py  test_fccr.py  test_goalseek.py  test_hardening.py  test_loaders.py  test_pipeline_golden.py  test_sensitivity.py  test_uploads.py  test_validate.py  test_verification.py
tests/golden/: borrowing_base_certificate.json  fccr_report.json  stress_borrowing_base_certificate.json  stress_fccr_report.json  verification_report.json
(+65 files in other folders)
